--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: stretch;
+    margin-bottom: 2rem;
 }
 
 .form button {
@@ -78,11 +79,11 @@ h1 {
 li {
     background: #f1f1f1;
     font-size: 1.4rem;
-    width: 100%;
+    max-width: 600px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: .5rem;
+    margin: .5rem auto;
     padding-left: .5rem;
     cursor: pointer;
     transition: transform .2s ease-in;
@@ -102,6 +103,7 @@ li:hover {
     cursor: pointer;
     transition: 0.3s;
     border-radius: 0;
+    align-self: stretch;
 }
 
 .delete-item:hover {
